# evony-private-server

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
DB/: evony (3).sql
project/: spitfire-win.vcxproj  spitfire-win.vcxproj.filters  spitfire.sln  spitfire.vcxproj  spitfire.vcxproj.filters
src/: Alliance.cpp  Alliance.h  AllianceMgr.cpp  AllianceMgr.h  BattleCalc.cpp  City.cpp  City.h  Client.cpp  Client.h  Hero.cpp  Hero.h  Map.cpp  Map.h  Market.cpp  Market.h  NpcCity.cpp  NpcCity.h  PlayerCity.cpp  PlayerCity.h  Tile.cpp  Tile.h  Utils.cpp  Utils.h  Valley.cpp  Valley.h  amf3.h  amf3array.cpp  amf3array.h  amf3classdef.cpp  amf3classdef.h  amf3object.cpp  amf3object.h  amf3objectmap.cpp  amf3objectmap.h  amf3parser.cpp  amf3parser.h  amf3reflist.h  amf3writer.cpp  amf3writer.h  combatsimulator.h  (+11 more)
src/packets/: packet.cpp  packet.h  palliance.cpp  palliance.h  parmy.cpp  parmy.h  pcastle.cpp  pcastle.h  pcity.cpp  pcity.h  pcommon.cpp  pcommon.h  pfield.cpp  pfield.h  pfortifications.cpp  pfortifications.h  pfriend.cpp  pfriend.h  pfurlough.cpp  pfurlough.h  pgameclient.cpp  pgameclient.h  phero.cpp  phero.h  pinterior.cpp  pinterior.h  plogin.cpp  plogin.h  pmail.cpp  pmail.h  pquest.cpp  pquest.h  prank.cpp  prank.h  preport.cpp  preport.h  pserver.cpp  pserver.h  pshop.cpp  pshop.h  (+8 more)
